Tue Oct 23 13:27:12 2001    <tartarus@users.sourceforge.net>

	* Added documentation of the test system (albeit brief). Also
	  mentioned the autotools book in HACKING.

Tue Oct 23 12:07:59 BST 2001  Olly Betts <olly@survex.com>

	* Updated .cvsignore files.

Tue Oct 23 11:29:47 BST 2001  Olly Betts <olly@survex.com>

	* Code tidying while investigating sporadic fails from quartztest.

Mon Oct 22 17:42:30 BST 2001  Olly Betts <olly@survex.com>

	* Minor fettles to quartztest: fixed warnings, whitespace tidying,
	  use mkdir(...) rather than system("mkdir ...")

Mon Oct 22 16:41:12 2001  James Aylett  <tartarus@users.sourceforge.net>

	* Renamed project to Xapian.

Mon Oct 22 14:22:00 BST 2001  Olly Betts <olly@survex.com>

	* Fixed non-ISO C++ code so Xapian will compile under GCC 3.0
	  (and also RedHat's "GCC 2.96").

Mon Oct 22 11:21:45 2001  James Aylett  <tartarus@users.sourceforge.net>

	* Altered omseek-config and the AC m4 macro to make uninst
	  executables link to the right version of the library

Mon Oct 22 10:38:20 2001  James Aylett  <tartarus@users.sourceforge.net>

	* Minor fixes to enable build (and test) under Solaris.

Fri Jun 22 13:24:59 2001  Sam Liddicott <sam@ananova.com>

        * Added some explicit type casts in xmlindexer and quartze backend
          to help gcc2.96 compile. 

Thu Jun 21 11:05:31 2001  James Aylett  <tartarus@users.sourceforge.net>

	* HACKING updated to (a) remove inaccurate statements about
	  copyright assignment, and (b) talk about developer write
	  access to CVS.

Mon Jun 11 13:24:43 2001  James Aylett  <tartarus@users.sourceforge.net>

	* pthread support detected using an automake macro. Should
	  be more portable as a result.

	* We need GNU make: buildall now tries to find it.

Mon Jun 11 12:07:00 2001  Hein Ragas <hragas@users.sourceforge.net>

        * Modified QuartzWritableDatabase::do_add_document and
          QuartzWritableDatabase::do_replace_document to leave the PositionList