@@ -206,13 +206,6 @@ class SocketClient : public NetClient {
 	/** Do the actual MSet fetching */
 	bool get_mset(om_doccount first, om_doccount maxitems, OmMSet &mset);
 
-	bool open_postlist(om_doccount first, om_doccount maxitems,
-			   om_doccount &termfreq_max,
-			   om_doccount &termfreq_min,
-			   om_doccount &termfreq_est,
-			   om_weight &maxw,
-			   std::map<om_termname, OmMSet::Internal::Data::TermFreqAndWeight> &term_info);
-
 	void next(om_weight w_min, om_docid &did, om_weight &w, OmKey &key);
 	void skip_to(om_docid new_did, om_weight w_min, om_docid &did, om_weight &w, OmKey &key);
 	
