@@ -239,158 +239,4 @@ class PendingMSetPostList : public PostList {
         ~PendingMSetPostList();
 };
 
-/// A postlist streamed across a network connection
-class RemotePostList : public PostList {
-    friend class RemoteSubMatch;
-    private:
-	const NetworkDatabase *db;
-	om_docid did;
-	om_weight w;
-	OmKey key;
-	
-	om_doccount termfreq_max;
-	om_doccount termfreq_min;
-	om_doccount termfreq_est;
-	om_weight maxw;
-
-	std::map<om_termname, OmMSet::Internal::Data::TermFreqAndWeight> term_info;
-
-    public:
-	om_doccount get_termfreq_max() const { return termfreq_max; }
-	om_doccount get_termfreq_min() const { return termfreq_min; }
-	om_doccount get_termfreq_est() const { return termfreq_est; }
-
-	om_docid  get_docid() const;
-	om_weight get_weight() const;
-	const OmKey * get_collapse_key() const;
-
-	om_weight get_maxweight() const;
-
-        om_weight recalc_maxweight();
-
-	PostList *next(om_weight w_min);
-	PostList *skip_to(om_docid did, om_weight w_min);
-	bool   at_end() const;
-
-	std::string get_description() const;
-
-	/** Return the document length of the document the current term
-	 *  comes from.
-	 */
-	virtual om_doclength get_doclength() const;
-
-	virtual PositionList * read_position_list();
-	virtual AutoPtr<PositionList> open_position_list() const;
-
-	const std::map<om_termname, OmMSet::Internal::Data::TermFreqAndWeight> get_terminfo() const {
-	    return term_info;
-	}
-
-        RemotePostList(const NetworkDatabase *db_, om_doccount maxitems_);
-        ~RemotePostList();
-};
-
-inline RemotePostList::RemotePostList(const NetworkDatabase *db_, om_doccount maxitems)
-    : db(db_), did(0)
-{
-    DEBUGCALL(MATCH, void, "RemotePostList::RemotePostList", db_ << ", " << maxitems);
-    db->link->open_postlist(0, maxitems,
-			    termfreq_max, termfreq_min, termfreq_est,
-			    maxw, term_info);
-}
-
-inline RemotePostList::~RemotePostList()
-{
-    DEBUGCALL(MATCH, void, "RemotePostList::~RemotePostList", "");
-    DEBUGLINE(MATCH, "did = " << did);
-    while (did != 0) {
-	db->link->skip_to((om_docid)-1, 1e20, did, w, key);
-    }
-}
-
-inline PostList *
-RemotePostList::next(om_weight w_min)
-{
-    DEBUGCALL(MATCH, PostList *, "RemotePostList::next", w_min);
-    db->link->next(w_min, did, w, key);
-    RETURN(NULL);
-}
-
-inline PostList *
-RemotePostList::skip_to(om_docid new_did, om_weight w_min)
-{
-    DEBUGCALL(MATCH, PostList *, "RemotePostList::skip_to", new_did << ", " << w_min);
-    if (new_did > did) db->link->skip_to(new_did, w_min, did, w, key);
-    RETURN(NULL);
-}
-
-inline om_docid
-RemotePostList::get_docid() const
-{
-    DEBUGCALL(MATCH, om_docid, "RemotePostList::get_docid", "");
-    Assert(did != 0);    
-    RETURN(did);
-}
-
-inline om_weight
-RemotePostList::get_weight() const
-{
-    Assert(did != 0);
-    return w;
-}
-
-inline const OmKey *
-RemotePostList::get_collapse_key() const
-{
-    Assert(did != 0);
-    return &key;
-}
-
-inline om_weight
-RemotePostList::get_maxweight() const
-{
-    // FIXME: should decrease as postlist progresses
-    return maxw;
-}
-
-inline om_weight
-RemotePostList::recalc_maxweight()
-{
-    // FIXME: send over network
-    return get_maxweight();
-}
-
-inline bool
-RemotePostList::at_end() const
-{
-    DEBUGCALL(MATCH, bool, "RemotePostList::at_end", "");
-    RETURN(did == 0);
-}
-
-inline std::string
-RemotePostList::get_description() const
-{
-    return "( Remote )";
-}
-
-inline om_doclength
-RemotePostList::get_doclength() const
-{
-    Assert(did != 0);
-    return 1; // FIXME: this info is unused with present weights
-//    return db->get_doclength(mset.internal->data->items[current].did);
-}
-
-inline PositionList *
-RemotePostList::read_position_list()
-{
-    throw OmUnimplementedError("RemotePostList::read_position_list() unimplemented");
-}
-
-inline AutoPtr<PositionList>
-RemotePostList::open_position_list() const
-{
-    throw OmUnimplementedError("RemotePostList::open_position_list() unimplemented");
-}
-
 #endif /* OM_HGUARD_MSETPOSTLIST_H */
